# SonicMania-Extra-Slot-Amy

./: .gitignore  CMakeLists.txt  README.md  RSDK-Library-GameAPI.cmake
.github/workflows/: main.yml
SonicMania/: Game.c  GameLink.h  GameVariables.h  autostatic.py
SonicMania/Objects/BSS/: BSS_Message.c
SonicMania/Objects/Cutscene/: RubyPortal.c
SonicMania/Objects/Global/: HUD.c  Music.c  Player.c  Player.h  SaveGame.c  StarPost.c
SonicMania/Objects/Helpers/: LogHelpers.c
SonicMania/Objects/Menu/: UIDiorama.c
